--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-48b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-48b.htm
@@ -10,11 +10,9 @@
 <BODY BGCOLOR="#ffffff">
 <H1>Showing or hiding files in the Navigator view</H1>
 
-<P>You can choose to hide system files or generated class files in 
-the Navigator view. (System files are those that have only a file extension 
-but no file name, for example .classpath.) In addition, you can restrict
-the displayed files to a working set.
-</P>
+<P>You can choose to hide system files or generated class files in the Navigator
+view. (System files are those that have only a file extension but no file
+name, for example .classpath.)</P>
 
 <ol>
   <li>On the toolbar for the Navigator view, click the <b>Menu</b> 
@@ -23,12 +21,16 @@ the displayed files to a working set.
   <li>Select <b>Filter</b>.</li>
   <li>In the dialog box that opens, select the checkboxes for the
     types of files that you want to hide.</li>
-  <li>To restrict the displayed files to a working set select the
-    checkbox at the bottom of the dialog box.
-    You may select a working set from the list of most recently used working sets,
-    choose a different one, or create a new one by selecting the <b>Other</b> button.</li>
 </ol>
-
+<P>In addition, you can restrict the displayed files to a working set.</P>
+<ol>
+  <li>On the toolbar for the Navigator view, click the <b>Menu</b> 
+    button <IMG src="../images/ref-79.gif" alt="Menu button" border="0" width="16" height="16">
+	to open the drop-down menu of display options.</li>
+  <li>Choose <B>Select Working Set...</B></li>
+  <li>Select an existing working set from the list or create a new one by selecting
+  <B>New...</B></li>
+</ol>
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-12.htm">Resources</a><br>
 <a href="../concepts/concepts-17.htm">Resource hierarchies</a><br>
