--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-4.htm
@@ -36,7 +36,7 @@ Opening perspectives<br>
 <a href="../tasks/tasks-31.htm">Specifying the default perspective</a><br>
 <a href="../tasks/tasks-28.htm">Switching between perspectives</a><br>
 <a href="../tasks/tasks-9k.htm">Configuring perspectives</a><br>
-<a href="../tasks/tasks-9i.htm">Saving a user-defined perspective</a><a href="../tasks/tasks-9j.htm"><br>
+  <a href="../tasks/tasks-9i.htm">Saving a user defined perspective</a><a href="../tasks/tasks-9j.htm"><br>
 Resetting perspectives</a></p>
 <P>&nbsp;<br>
 <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a>
