--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100b.htm
@@ -87,7 +87,7 @@
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
 <br><a href="../reference/ref-47.htm">CVS</a>
-<br><a href="../reference/ref-41a.htm">Merge Wizard</a>
+<br><a href="../reference/ref-41a.htm">Merge wizard</a>
 </p>
 
 <p>&nbsp;<br>
