--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
@@ -46,7 +46,7 @@
  Navigating the user interface using the keyboard</a></p>
  <p><img src="../../images/ngrelr.gif" alt="Related references" border="0" width="159" height="27"><br>
  <a href="keyboardshortcuts.htm">Keys</a><br>
-<a href="fontsandcolors.htm">Font and color settings using the Window Preferences.</a></p>
+  <a href="fontsandcolors.htm">Font and color settings in Eclipse</a></p>
 
  
 <p><a href="../../hglegal2003.htm"><img src="../../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation 2000, 2003. All Rights Reserved." border="0" width="324" height="14" ></a></p>
