--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -160,7 +160,7 @@ For this type of conflict, the rule is that the <code>Ctrl+X</code> key sequence
 <a href="../../tasks/tkeybindings.htm">Changing the key bindings</a><br>
 <a href="../chelpsys.htm">Online help system</a></p>
 <p><img src="../../images/ngrelr.gif" alt="Related references" width="159" height="27"><br>
-<a href="fontsandcolors.htm">Font and color settings using the Window Preferences</a></p>
+  <a href="fontsandcolors.htm">Font and color settings in Eclipse</a></p>
 <p><a href="../../hglegal2003.htm">
 <img src="../../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a></p> 
 </body>
