--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
@@ -76,13 +76,12 @@
    <li>To print the current page or active frame, press Ctrl+P. </li>
  </ul>
 <p><img src="../../images/ngrelc.gif" alt="Related concepts" border="0" width="159" height="27"><br>
- <a href="accessmain.htm">Accessibility Features in Eclipse</a><br>
+  <a href="accessmain.htm">Accessibility features in Eclipse</a><br>
  <a href="../../tasks/tkeybindings.htm">Changing the key bindings</a><br>
  <a href="keyboardshortcuts.htm">Keys</a> <br>
 <a href="../chelpsys.htm">Online help system</a></p>
  <p><img src="../../images/ngrelr.gif" alt="Related references" border="0" width="159" height="27"><br>
- <a href="fontsandcolors.htm">Font and color settings using the Window 
- Preferences</a></p>
+  <a href="fontsandcolors.htm">Font and color settings in Eclipse</a></p>
 
 <p><a href="../../hglegal2003.htm">
 <img src="../../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a></p> 
