--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
@@ -69,8 +69,10 @@ for finding, downloading, and installing new features.
 <br><a href="../tasks/tasks-34.htm">Installing new features with the update manager</a>
 <br><a href="../tasks/tasks-34a.htm">Installing several features at once using group updates</a>
 <br><a href="../tasks/tasks-35.htm">Picking up pending changes</a>
-<br><a href="../tasks/tasks-36.htm">Updating Eclipse with the update manager</a>
-<br><a href="../tasks/tasks-37.htm">Saving a configuration</a>
+<br>
+  <a href="../tasks/tasks-36.htm">Updating features with the update manager</a> 
+  <br>
+  <a href="../tasks/tasks-37.htm">Saving a configuration</a>
 <br><a href="../tasks/tasks-38.htm">Restoring a saved configuration</a>
 </P>
 
