--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-5.htm
@@ -35,7 +35,7 @@ positions in the Workbench window.&nbsp; </P>
 <a href="../tasks/tasks-3e.htm">Moving and docking views</a><br>
 <a href="../tasks/tasks-9b.htm">Creating fast views</a><br>
 <a href="../tasks/tasks-3i.htm">Maximizing a view or editor</a><br>
-<a href="../tasks/tasks-9i.htm">Saving a user-defined perspective</a><br>
+  <a href="../tasks/tasks-9i.htm">Saving a user defined perspective</a><br>
 <a href="../tasks/tasks-9j.htm">Resetting perspectives</a>
 </p>
 <p>&nbsp;<br>
