--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
@@ -49,7 +49,7 @@ does not already exist remotely.
 </p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-117a.htm">Sharing an imported CVS project</a><br>
+<a href="tasks-117a.htm">Project checked out with another CVS tool</a><br>
 <a href="tasks-96.htm">Checking out a project from a CVS repository</a><br>
 <a href="tasks-103.htm">Replacing resources in the Workbench</a>
 </p>
