--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-118.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-118.htm
@@ -47,7 +47,7 @@
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-100.htm">Creating a version of a project</a><br>
 <a href="tasks-117.htm">Sharing a new project using CVS</a><br>
-<a href="tasks-119.htm">Viewing a File's Revision History</a><br>
+<a href="tasks-119.htm">Viewing a file's revision history</a><br>
 <a href="tasks-100a.htm">Branching</a>
 </p>
 
