alt tags for images

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -19,7 +19,7 @@
       <p>You can use <strong>Stop in main&nbsp;</strong>in a Java Application 
         launch configuration to cause your program to stop at the first executable 
         line of the main method when you run it under debug mode.</p>
-      <p><img src="images/stop-in-main.gif" width="478" height="202"></p>
+      <p><img src="images/stop-in-main.gif" width="478" height="202" alt="Main tab for a Java Appplication launch configuration"></p>
     </td>
   </tr>
   <tr> 
@@ -30,7 +30,7 @@
       actually halts execution.&nbsp; You can specify whether you want the breakpoint 
       to suspend execution only when the condition is true, or when the condition 
       value changes. 
-      <p><img src="images/conditional-breakpoint-property.gif" width="351" height="172"></p>
+      <p><img src="images/conditional-breakpoint-property.gif" width="351" height="172" alt="Breakpoint properties dialog"></p>
     </td>
   </tr>
   <tr> 
@@ -41,7 +41,7 @@
       breakpoint when you don't need it (using <strong>Disable Breakpoint </strong>in 
       the breakpoint context menu or the <strong>Breakpoints view</strong>) and 
       enabling it when needed again.&nbsp; 
-      <p><img src="images/breakpoint-context-menu.gif" width="411" height="124"></p>
+      <p><img src="images/breakpoint-context-menu.gif" width="411" height="124" alt="Disable Breakpoint action in the ruler context menu"></p>
     </td>
   </tr>
   <tr> 
@@ -50,7 +50,7 @@
       <p>When a thread is suspended in the debugger, you can change the values 
         of Java primitives and Strings in the <b>Variables</b> view. From the 
         variable's context menu, choose <b>Change Variable Value</b>. </p>
-      <p><img src="images/change-variable-value.gif" width="483" height="275"></p>
+      <p><img src="images/change-variable-value.gif" width="483" height="275" alt="Change variable value dialog"></p>
     </td>
   </tr>
   <tr> 
@@ -58,7 +58,7 @@
     <td width="70%" valign="top" align="left">When a thread is suspended and the 
       cursor is placed over a variable in the Java editor, the value of that variable 
       is displayed as hover help. 
-      <p><img src="images/variable-hover.gif" width="400" height="104"></p>
+      <p><img src="images/variable-hover.gif" width="400" height="104" alt="Variable value hover in the editor"></p>
     </td>
   </tr>
   <tr> 
@@ -90,7 +90,7 @@
         of chained or nested method calls. Simply highlight the method you wish 
         to step into and select <b>Step into Selection</b> from the Java editor 
         context menu.</p>
-      <p><img src="../whatsNew/images/step-into-selection.gif" width="703" height="168"></p>
+      <p><img src="../whatsNew/images/step-into-selection.gif" width="703" height="168" alt="Selected method name in Java editor"></p>
     </td>
   </tr>
   <tr> 
@@ -100,7 +100,7 @@
       can be locked to a specific process via a drop-down menu in the Console 
       view toolbar. There's also a new scroll lock button that stops the console 
       from automatically scrolling as new output is appended. 
-      <p><img border="0" src="images/selective-output.gif" width="459" height="140"></p>
+      <p><img border="0" src="images/selective-output.gif" width="459" height="140" alt="Console view"></p>
     </td>
   </tr>
   <tr> 
@@ -125,7 +125,7 @@
         view and choose <b>Properties...</b> from its context menu. The most important 
         properties for this type of breakpoint are the <b>Access</b> and <b>Modification</b> 
         checkboxes which control when the breakpoint can suspend execution.</p>
-      <p><img src="images/watchpoint-properties.gif" width="403" height="458"></p>
+      <p><img src="images/watchpoint-properties.gif" width="403" height="458" alt="Breakpoint properties dialog"></p>
     </td>
   </tr>
   <tr> 
@@ -135,7 +135,7 @@
     <td width="70%" valign="top" align="left"> 
       <p>The debugger's<b> Threads and Monitors</b> view shows which threads are 
         holding locks and which are waiting to acquire locks. </p>
-      <p><img src="../whatsNew/images/threads-monitors.gif" width="373" height="260"></p>
+      <p><img src="../whatsNew/images/threads-monitors.gif" width="373" height="260" alt="Monitors view showing deadlock cycles"></p>
       <p>&nbsp;</p>
     </td>
   </tr>
@@ -158,7 +158,7 @@
         A scrapbook page is a container for random snippets of code that you can 
         execute at any time without a context. To create a scrapbook page in the 
         Java Perspective, select File&gt;New&gt;Scrapbook Page from the workbench 
-        menu, or click the New Scrapbook Page button <img src="images/new-scrapbook-button.gif" width="17" height="19">on 
+        menu, or click the New Scrapbook Page button <img src="images/new-scrapbook-button.gif" width="17" height="19" alt="New scrapbook toolbar button">on 
         the workbench toolbar. Enter whatever code you wish to execute, then select 
         it. There are three ways to execute your code:</p>
       <ul>
@@ -166,7 +166,7 @@
           view</li>
         <li>Execute the selected code and place the String result right in the 
           scrapbook page<br>
-          <img src="images/scrapbook-display.gif" width="544" height="139"> </li>
+          <img src="images/scrapbook-display.gif" width="544" height="139" alt="Scrapbook editor displays the textual result in the editor"> </li>
         <li>Execute the selected code (and ignore any returned result)</li>
       </ul>
       <p>These actions are in the workbench toolbar and also in the scrapbook 
@@ -191,10 +191,10 @@
         to always appear at the top of the drop-downs by making the configuration 
         a 'favorite'. In the Debug&gt;Launch History preference page, you can 
         establish favorites by launch type (Run, Debug, External Tools).</p>
-      <p><img src="images/favorites-prefs.gif" width="541" height="528"></p>
+      <p><img src="images/favorites-prefs.gif" width="541" height="528" alt="Launch history preference page"></p>
       <p>Now, the Debug drop-down menu shows the specified configurations as favorites, 
         with the rest of the configurations in history order.</p>
-      <p><img src="images/debug-drop-down.gif" width="191" height="206"></p>
+      <p><img src="images/debug-drop-down.gif" width="191" height="206" alt="Debug drop-down menu on workbench toolbar"></p>
     </td>
   </tr>
   <tr> 
@@ -208,7 +208,7 @@
         variable's context menu. This detail formatter will be used for all objects 
         of the same type. You can view and edit all detail formatters in the Java&gt;Debug&gt;Detail 
         Formatters preference page. </p>
-      <p><img src="images/detail-formatter.gif" width="426" height="582"></p>
+      <p><img src="images/detail-formatter.gif" width="426" height="582" alt="Detail formatter dialog"></p>
     </td>
   </tr>
   <tr> 
@@ -238,7 +238,7 @@
     <td width="70%" valign="top" align="left">The details area of the debugger's 
       <b>Variables</b> and <b>Expressions</b> views supports word wrap, available 
       from the view drop-down menu. 
-      <p><img src="images/variables-details-pane.gif" width="352" height="218"></p>
+      <p><img src="images/variables-details-pane.gif" width="352" height="218" alt="Word wrap action in Variables view drop-down menu"></p>
     </td>
   </tr>
   <tr> 
@@ -253,7 +253,7 @@
         <li>When entering code in a Scrapbook page</li>
         <li>In the Display view</li>
       </ul>
-      <p><img src="images/display-view-code-assist.gif" width="406" height="228"></p>
+      <p><img src="images/display-view-code-assist.gif" width="406" height="228" alt="Display view code assist pop-up"></p>
       <p>&nbsp;</p>
     </td>
   </tr>
@@ -263,7 +263,7 @@
       line used to launch a program in run or debug mode by selecting <b>Properties</b> 
       from the context menu of a process or debug target, even if the launch has 
       terminated. 
-      <p><img src="images/process-info.gif" width="496" height="254"></p>
+      <p><img src="images/process-info.gif" width="496" height="254" alt="Process properties dialog"></p>
     </td>
   </tr>
   <tr> 
@@ -275,7 +275,7 @@
         and the stack trace is underlined. Pressing the mouse button opens the 
         associated Java source file and positions the cursor at the corresponding 
         line.</p>
-      <p><img border="0" src="images/stack-trace-hyperlink.gif" width="416" height="133"></p>
+      <p><img border="0" src="images/stack-trace-hyperlink.gif" width="416" height="133" alt="Stack traces in Console view with hyperlinks"></p>
     </td>
   </tr>
 </table>
