alt tags for images

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -293,7 +293,7 @@
     <td width="70%" valign="top" align="left"> 
       <p>The debugger's new <b>Threads and Monitors</b> view shows which threads 
         are holding locks and which are waiting to acquire locks. </p>
-      <p><img src="images/threads-monitors.gif" width="373" height="260"> </p>
+      <p><img src="images/threads-monitors.gif" width="373" height="260" alt="Monitors view showing deadlock cycles"> </p>
       <p>&nbsp;</p>
     </td>
   </tr>
@@ -309,7 +309,7 @@
     <td width="70%" valign="top" align="left">You can now set breakpoints &amp; 
       watch points specific to a particular object instance. In the Variables 
       view, choose <b>Instance Breakpoints...</b> from the variables context menu. 
-      <p><img src="images/breakpoints-instances.gif" width="344" height="428"></p>
+      <p><img src="images/breakpoints-instances.gif" width="344" height="428" alt="Instance filter dialog"></p>
     </td>
   </tr>
   <tr> 
@@ -326,7 +326,7 @@
       is now possible to declare conditional breakpoints that are triggered whenever 
       the value of an expression changes. In addition, code assist is now available 
       when entering the condition. 
-      <p><img src="images/conditional-breakpoint.gif" width="351" height="171"></p>
+      <p><img src="images/conditional-breakpoint.gif" width="351" height="171" alt="Breakpoint properties dialog"></p>
     </td>
   </tr>
   <tr>
@@ -343,7 +343,7 @@
         a series of chained or nested method calls. Simply highlight the method 
         you wish to step into and select <b>Step into Selection</b> from the Java 
         editor context menu.</p>
-      <p><img src="images/step-into-selection.gif" width="703" height="168"></p>
+      <p><img src="images/step-into-selection.gif" width="703" height="168" alt="Selected method name in editor"></p>
     </td>
   </tr>
   <tr> 
@@ -388,7 +388,7 @@
     <td width="70%" valign="top" align="left">The details area of the debugger's
       <b>Variables</b> and <b>Expressions</b> views now supports word wrap, available 
       from the view drop-down menu. 
-      <p><img src="images/variables-view-drop-down.gif" width="230" height="152"></p>
+      <p><img src="images/variables-view-drop-down.gif" width="230" height="152" alt="Word wrap action in Variables view drop-down menu"></p>
     </td>
   </tr>
   <tr>
@@ -405,7 +405,7 @@
         hand and the stack trace is underlined. Pressing the mouse button opens 
         the associated Java source file and positions the cursor at the corresponding 
         line.</p>
-      <p><img border="0" src="../tips/images/stack-trace-hyperlink.gif" width="416" height="133"></p>
+      <p><img border="0" src="../tips/images/stack-trace-hyperlink.gif" width="416" height="133" alt="Stack trace with hyperlinks in Console view"></p>
     </td>
   </tr>
   <TR>
@@ -434,7 +434,7 @@
       <p>Two new actions are available in the pull-down menu of the Variables 
         view - <b>Show Constants</b> &amp; <b>Show Static Variables</b>. These 
         actions toggle the visibility of static final and static variables. </p>
-      <p><img src="images/variables-view-drop-down.gif" width="230" height="152"></p>
+      <p><img src="images/variables-view-drop-down.gif" width="230" height="152" alt="Variable filter actions in Variables view drop-down menu"></p>
     </td>
   </tr>
   <tr> 
@@ -465,7 +465,7 @@
       <p>When debugging, the Java editor now indicates the currently executing 
         with an arrow in the left margin. This arrow is solid for the top stack 
         frame and hollow for non-top stack frames. </p>
-      <p><img src="images/instruction-pointer.gif" width="401" height="66"></p>
+      <p><img src="images/instruction-pointer.gif" width="401" height="66" alt="Instruction pointer appears in editor ruler"></p>
     </td>
   </tr>
 	</table>  
