Link phrase the makes sense when read out of context

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-80_ant.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-80_ant.htm
@@ -12,7 +12,7 @@
 <P CLASS="Para">This chapter covers Eclipse's External Tools framework, and its 
   integration with <a href="http://ant.apache.org/">Ant</a>, the build tool from 
   the <a href="http://www.apache.org/">Apache Software Foundation</a>. If you 
-  are not familiar with Ant, please look <a href="http://ant.apache.org/manual/index.html">here</a> 
+  are not familiar with Ant, please look the <a href="http://ant.apache.org/manual/index.html">Apache Ant manual</a> 
   for documentation. This chapter assumes you have a basic knowledge of Ant.</P>
 
 
