little more explanation for expand selection to

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -210,9 +210,11 @@
 			<td valign="top" align="right"><b>Structure selections</b></td>
 			<td valign="top">You can&nbsp;quickly select Java code
 			syntactically using the Structured Selection feature.<br>
-			Highlight the text and press <strong>Ctrl+Shift+Arrow Up</strong> or
-			select <strong>Edit &gt; Expands Selection To &gt; Enclosing Element</strong>
-			from the menu bar.</td>
+            Highlight the text and press <strong>Ctrl+Shift+Arrow Up</strong> or select 
+            <strong>Edit &gt; Expand Selection To &gt; Enclosing Element</strong> from 
+            the menu bar - the editor will select the smallest syntactic element that 
+            encloses the selection. You can then expand it further by running the action 
+            again.</td>
 		</tr>
 		<tr>
 			<td valign="top" align="right"><b>Find the matching bracket</b></td>
