Add alt text for images

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-83_edit.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-83_edit.htm
@@ -20,7 +20,7 @@
     the file's context menu. Note that the default editor for a .xml file is a 
     simple text editor, but this can be changed in the <b>Window &gt; Preferences &gt; Workbench &gt; File 
     Associations</b>. </li>
-  <li>Enter the following content in the editor.<img src="../images/Image600_editor_first_target.gif" alt="" border="0" width="487" height="270"></li>
+  <li>Enter the following content in the editor.<img src="../images/Image600_editor_first_target.gif" alt="HelloWorld file content" border="0" width="487" height="270"></li>
   <li>Notice the syntax coloring for property values.</li>
   <li>Begin to enter a second target by typing '&lt;tar', then hit Ctrl-Space 
     to activate content assist. You are presented with a list of valid completions. 
@@ -33,7 +33,7 @@
   <li>Save the changes to HelloWorld.xml.</li>
   <li>Make the Outline view visible and notice that there are entries for each 
     property and each target. In addition, each task under a target has an entry.<br>
-    <img src="../images/Image601_outline_hello.gif" alt="" border="0" width="169" height="148"></li>
+    <img src="../images/Image601_outline_hello.gif" alt="Outline view for an Ant buildfile" border="0" width="169" height="148"></li>
   <li>Clicking on an entry in the Outline view will scroll the editor to that 
     entry. In addition, when the Outline view has focus, typing a character will 
     move the selection in the Outline view to the next visible entry beginning 
@@ -44,7 +44,7 @@
     knows that nested targets are not allowed. Previously, when we used content 
     assist to create a target tag, the editor knew that a tar task was not allowed 
     outside of a target.<br>
-    <img src="../images/Image602_tar_assist.gif" alt="" border="0" width="583" height="194"> 
+    <img src="../images/Image602_tar_assist.gif" alt="Code assist in Ant editor" border="0" width="583" height="194"> 
   </li>
   <li>Close the editor and do not save changes.</li>
 </ol>
