--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85a_ant_view.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85a_ant_view.htm
@@ -35,7 +35,7 @@
     Search. The HelloWorld.xml file is found and placed in the Ant view.</li>
   <li>Expand the top-level entry to see the default target Hello, and the subtarget 
     World.<br>
-    <img src="../images/Image618_ant_view.gif" alt="" border="0" width="146" height="152"> </li>
+    <img src="../images/Image618_ant_view.gif" alt="Ant view" border="0" width="146" height="152"> </li>
   <li>Select the World subtarget and click the Play button. Notice that just the 
     World subtarget gets executed. </li>
   <li>Select the top-level HelloWorld build file and click Play. Notice that just 
@@ -53,14 +53,6 @@
   <li>Select the HelloWorld file, then click the Remove button. The buildfile is 
     removed from the view. Note that this does not delete the file from the workspace.</li>
 </ol>
-<p>&nbsp;</p>
-<P><a href="qs-86_use_cases.htm"> <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
-  Use cases for Ant in Eclipse</a></P>
-
-
-<P><a href="qs-85_ant_configs.htm"> <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
-  Saving &amp; Reusing Ant options</a></P>
-
 
 <P><br>
 <a href="../hglegal2003.htm">
