--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-91_build_options.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-91_build_options.htm
@@ -14,7 +14,7 @@
   it's time to explore some more options. </P>
 <P CLASS="Para">As can be seen in the Outline view, the default build.xml Ant 
   buildfile has a number of targets.<br>
-  <img src="../images/Image608_buildxml_outline.gif" alt="" border="0" width="217" height="405"> 
+  <img src="../images/Image608_buildxml_outline.gif" alt="Outline view of default build.xml file" border="0" width="217" height="405"> 
 </P>
 <P CLASS="Para">Solid green arrows denote targets, while subtargets are represented 
   by hollow green arrows. The following are the useful top-level targets:</P>
