--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85_ant_configs.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85_ant_configs.htm
@@ -31,7 +31,7 @@
     view and edit. The launch configuration we created when we ran the build.xml 
     buildfile is selected in the tree at the left, and the tabs on the right show 
     the options for this launch configuration.<br>
-    <img src="../images/Image604_et_dialog.gif" alt="" border="0" width="677" height="586"> </li>
+    <img src="../images/Image604_et_dialog.gif" alt="External tools dialog" border="0" width="677" height="586"> </li>
   <li>At the top of the dialog, change the Name to 'Hello World' and <b>Apply</b> the 
     change.</li>
   <li>In the tree at left, bring up on the context menu on the selected launch 
@@ -46,7 +46,7 @@
     view. This time however, because the targets were reversed, the output is 
     reversed as well.</li>
   <li>Go back to the External Tools drop down in the toolbar. <br>
-    <img src="../images/Image605_et_dropdown.gif" alt="" border="0" width="144" height="118"><br>
+    <img src="../images/Image605_et_dropdown.gif" alt="External tools drop-down menu" border="0" width="144" height="118"><br>
     Notice now that there are two entries in the history, one for Hello World 
     and one for World Hello. In order to rerun the Ant buildfile so that it outputs 
     Hello World, just select this launch configuration in the history. To rerun 
@@ -58,6 +58,10 @@
   In the next chapters, we consider several real-world use cases for running Ant 
   buildfiles inside Eclipse.</p>
 
+<P><br>
+<a href="../hglegal2003.htm">
+<img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a>
+</P>
 
 </BODY>
 </HTML>
