--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-90_build_jar.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-90_build_jar.htm
@@ -23,7 +23,7 @@
     the smallest subset of the workspace necessary for your buildfile.</li>
   <li>Check <b>Refresh resources after running tool</b>, then select <b>${project}</b> in 
     the list.<br>
-    <img src="../images/Image606_refresh_tab.gif" alt="" border="0" width="474" height="498"> 
+    <img src="../images/Image606_refresh_tab.gif" alt="Refresh tab in Run Ant dialog" border="0" width="474" height="498"> 
   </li>
   <li>Click <b>Run</b>.</li>
   <li>The Ant buildfile runs, executing the build.jars target. Output from the buildfile 
