--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-96_non_ant_pjs.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-96_non_ant_pjs.htm
@@ -13,7 +13,7 @@
 <P CLASS="Para"> When we worked through our project builder example, you may have 
   noticed that when we created our project builder Ant buildfile, we had a choice 
   of external tool type:<br>
-  <img src="../images/Image614_et_type_dialog.gif" alt="" border="0" width="326" height="220"> </P>
+  <img src="../images/Image614_et_type_dialog.gif" alt="Choice of external tool type dialog" border="0" width="326" height="220"> </P>
 <P CLASS="Para">The <b>Program</b> option is essentially a catch-all, allowing you 
   to define an external tool for any executable file that is accessible on your 
   local or network file system. Suppose that instead of Ant, you prefer to use 
@@ -29,7 +29,7 @@
   <li>The External Tools dialog appears, configured for Program type tools.</li>
   <li>Enter the location of your script, its working directory, and any required 
     arguments. <br>
-    <img src="../images/Image615_program_builder.gif" alt="" border="0" width="422" height="572"> 
+    <img src="../images/Image615_program_builder.gif" alt="External tools dialog for program type tools" border="0" width="422" height="572"> 
   </li>
   <li>In this case, the script is a Windows .bat file, but it could be a Linux 
     shell script, a Perl script or just about anything else that can be executed 
