--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-97_standalone_ets.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-97_standalone_ets.htm
@@ -20,10 +20,10 @@
   <li>Select some .jar file in your workspace.</li>
   <li>Select <b>External Tools...</b> from the External Tools workbench toolbar drop 
     down.<br>
-    <img src="../images/Image616_et_dropdown.gif" alt="" border="0" width="142" height="67"> 
+    <img src="../images/Image616_et_dropdown.gif" alt="External tools drop-down menu" border="0" width="142" height="67"> 
   </li>
   <li>Select <b>Program</b> in the tree, then click <b>New</b>.<br>
-    <img src="../images/Image617_jar_inspector.gif" alt="" border="0" width="625" height="567"> 
+    <img src="../images/Image617_jar_inspector.gif" alt="External tools dialog for jar inspector script" border="0" width="625" height="567"> 
   </li>
   <li>Name the launch configuration 'jar inspector'.</li>
   <li>Use the first <b>Browse File System...</b> button to locate the jar executable.</li>
@@ -48,10 +48,6 @@
   plug-ins. </p>
 
 
-<P>&nbsp;</P>
-<p><a href="qs-96_non_ant_pjs.htm"> <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
-  Non-Ant project builders</a></p>
-<p></p>
 <P><br>
   <a href="../hglegal2003.htm"> <img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a> 
 </P>
