added wrap strings tip

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -299,6 +299,21 @@
 			the <b>Java &gt; Appearance &gt; Member Sort Order</b> preference page.<br>
 			You'll find the action under <b>Source &gt; Sort Members</b></td>
 		</tr>
+		<tr>
+			<td valign="top" align="right"><b>Wrap Strings</b></td>
+			<td valign="top" align="left">
+           
+      <p>You can have String literals wrapped when you press edit them. For example, 
+        if you have code like this:</p>
+           <pre>String message= &quot;This is some long message.&quot;;</pre>
+           <p>position your caret after the &quot;some&quot; word and press Enter. 
+           The String literal will be automatically changed to:</p>
+           <pre>String message= &quot;This is some&quot; + 
+           &quot; long message.&quot;;</pre>
+           <p>This behavior can be customized in the <b>Java &gt; Editor &gt; Typing</b> 
+           preference page. </p>
+    </td>
+		</tr>
 				
 	</tbody>
 </table>
