--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-DetectingExistingLayout.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-DetectingExistingLayout.htm
@@ -38,7 +38,7 @@ package com.xyz;
 			</pre>
 		</p>
 		<p>
-			<em>Warning: </em>If the preference <strong>Window &gt; Preferences &gt; Java &gt; Compiler &gt Build Path &gt; Scrub output folder on full build</strong>
+			<em>Warning: </em>If the preference <strong>Window &gt; Preferences &gt; Java &gt; Compiler &gt; Build Path &gt; Scrub output folder on full build</strong>
 			is checked, clicking <strong>Finish</strong> will scrub the &quot;bin&quot; directory in the file system before
 			generating the class files.
 		</p>
