--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -96,7 +96,7 @@
      <a href="../reference/ref-11.htm">Debug preferences</a><br>
      <a href="../reference/ref-51.htm">Debug view</a><br>
      <a href="../reference/ref-4.htm">Run and debug actions</a><br>
-    </a><a href="../reference/ref-35.htm">Breakpoints view</a><br>
+     <a href="../reference/ref-35.htm">Breakpoints view</a><br>
      <a href="../reference/ref-45.htm">Console view</a><br>
      <a href="../reference/ref-52.htm">Display view</a><br>
      <a href="../reference/ref-56.htm">Expressions view</a><br>
