--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_hover.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_hover.htm
@@ -12,9 +12,9 @@ Text and ruler hover
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H2>Text and ruler hover</H2>
-<p>Hover support is provided in the platform text framework, allowing you to
-implement informational hovers (or infopops) over the text and the vertical
-ruler shown in your editor.</p>
+<p>Hover support is provided in the platform text framework, allowing you to implement 
+  informational hovers (or infopops) over the text and the rulers shown in your 
+  editor.</p>
 <p>Hover support is optional.&nbsp; By default, <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewerConfiguration.html">SourceViewerConfiguration</a>
 </b>does not install hover behavior since there is no useful general information
 to show.&nbsp; In order to provide text or ruler hover, your editor's source
@@ -37,15 +37,14 @@ pluggable behavior overrides in a subclass of <b><a href="../reference/api/org/e
 </b>provides the advantage of consolidating all of the definitions in one place.</p>
 <p>Let's look at the specifics of providing both kinds of hover.</p>
 <h3>Text hover</h3>
-<p>Text hover allows you to provide informational text about text shown in the
-editor.&nbsp; This is done using the <b><a href="../reference/api/org/eclipse/jface/text/ITextHover.html">ITextHover</a></b>
-interface.&nbsp; A text hover is responsible for computing the region that
-should be used as the source of hover information, given an offset into the
-document.&nbsp; It is also responsible for providing the informational text
-about a specific region.&nbsp; <b>JavaTextHover</b> is pretty simple.&nbsp; It
-checks to see if the supplied offset for hover is contained inside the text
-selection.&nbsp;&nbsp;&nbsp; If so, it supplies a valid hover region at the
-offset.&nbsp;</p>
+<p>Text hover allows you to provide informational text about text shown in the 
+  editor.&nbsp; This is done using the <b><a href="../reference/api/org/eclipse/jface/text/ITextHover.html">ITextHover</a></b> 
+  interface.&nbsp; A text hover is responsible for computing the region that should 
+  be used as the source of hover information, given an offset into the document.&nbsp; 
+  It is also responsible for providing the informational text about a specific 
+  region.&nbsp; <b>JavaTextHover</b> is pretty simple.&nbsp; It checks to see 
+  if the supplied offset for hover is contained inside the text selection.&nbsp;&nbsp;&nbsp; 
+  If so, it supplies the selection range as hover region.&nbsp;</p>
 
 <pre><font color="#4444CC">public class JavaTextHover implements ITextHover {
 
@@ -108,7 +107,7 @@ decisions about the info that should be shown.&nbsp; For example, the annotation
 model could be retrieved from the source viewer in order to provide hover info
 for any annotations shown in the vertical ruler.&nbsp; The <b>JavaAnnotationHover</b>
 provided by the JDT editor provides this capability.
-<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." border="0" width="324" height="14"></a></p>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." width="324" height="14"></a></p>
 
 </BODY>
 </HTML>
