--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_sourceviewers.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_sourceviewers.htm
@@ -14,17 +14,14 @@ Configuring a source viewer
 <H2>Configuring a source viewer</H2>
 <p>So far we've looked at <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewer.html">SourceViewer</a></b>
  in the context of managing source code annotations.</p>
-<p>The <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewer.html">SourceViewer</a></b>
- is also the central hub for configuring your editor with pluggable behavior
-such as text hovering, syntax highlighting, provided.&nbsp; The framework is
-designed so that you do not need to understand the detailed implementation of <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewer.html">SourceViewer</a></b>.&nbsp;&nbsp;</p>
-<p>Instead, the editor itself supplies a <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewerConfiguration.html">SourceViewerConfiguration</a>
-</b>so that it can configure the <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewer.html">SourceViewer</a></b>
-appropriately when it creates it.&nbsp; The Java example editor need only supply
-a <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewerConfiguration.html">SourceViewerConfiguration</a>
-</b>appropriate for its needs.&nbsp; The following snippet shows how the <b>JavaTextEditor</b>
-creates its configuration:</p>
-
+<p>The <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewer.html">SourceViewer</a></b> 
+  is also the central hub for configuring your editor with pluggable behavior 
+  such as text hovering and syntax highlighting.&nbsp; &nbsp;For that the editor 
+  supplies a <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewerConfiguration.html">SourceViewerConfiguration</a> 
+  </b>that is used to configure the <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewer.html">SourceViewer</a></b> 
+  when it created.&nbsp; The Java example editor only needs to supply a <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewerConfiguration.html">SourceViewerConfiguration</a> 
+  </b>appropriate for its needs.&nbsp; The following snippet shows how the <b>JavaTextEditor</b> 
+  creates its configuration:</p>
 <pre><font color="#4444CC">protected void initializeEditor() {
 	super.initializeEditor();
 	JavaEditorEnvironment.connect(this);
@@ -53,15 +50,14 @@ supplies customized helper objects for the Java editor example:
 public IAutoIndentStrategy getAutoIndentStrategy(ISourceViewer sourceViewer, String contentType) {
 	return (IDocument.DEFAULT_CONTENT_TYPE.equals(contentType) ? new JavaAutoIndentStrategy() : new DefaultAutoIndentStrategy());
 }</font></pre>
-<p>In the first method, a customized helper class is provided for implementing
-annotation hovering.&nbsp; In the second method, the content type of the
-document is queried to determine whether a customized auto-indent strategy or
-the default strategy should be used.
- </p>
+<p>In the first method, a customized helper class is provided for implementing 
+  annotation hovering.&nbsp; In the second method, the default content type of 
+  the document is queried to determine whether a customized auto-indent strategy 
+  or the default strategy should be used. </p>
 <p>See the API reference for <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewerConfiguration.html">SourceViewerConfiguration</a></b>
 for all the ways you can configure a source viewer by overriding methods.
  </p>
-<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." border="0" width="324" height="14"></a></p>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." width="324" height="14"></a></p>
 
 </BODY>
 </HTML>
