*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
@@ -29,8 +29,7 @@
       <li>
         On the <strong>Libraries</strong> tab, click <strong>Add Variable</strong> for adding a variable that refers to a JAR file.<br>
          The <strong>New Variable Classpath Entry</strong> dialog appears which shows all available classpath variables.
-         You can <strong>Edit...</strong> New... a variable or
-        create a new variable with <strong>New...</strong>.<br>
+         You can <strong>Edit...</strong> a variable or create a new variable from the <strong>Edit...</strong> dialog.<br>
          <p><img src="../images/classpathVar.gif" alt="Classpath variable dialog"></p>
       </li>
       <li>
