*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-81b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-81b.htm
@@ -1,51 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Creating a bookmark for an entire file</title>
-</HEAD>
-
-<BODY BGCOLOR="#ffffff">
-<a NAME="elementId-1001031"></a>
-<a NAME="pgfId-1001036"></a>
-
-<h1>Creating a bookmark for an entire file</h1>
-
-<p>You can bookmark individual files in the Workbench, in order to open them
-quickly from the Bookmarks view later.
-</p>
-
-<ol>
-  <li>In the Navigator view, right-click the file that you want to
-    add to your list of bookmarks.</li>
-  <li>Select <b>Add Bookmark</b> from the file's pop-up menu.</li>
-</ol>
-
-<p>At any time, You can open the bookmarked file for editing by
-double-clicking the bookmark in the Bookmarks view
-(<b>Window &gt; Show View &gt; Bookmarks</b>).
-</p>
-
-<p>You can also create bookmarks for specific lines of text or
-source code or within a file. See the list of related topics below.
-</p>
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/cbookmrk.htm">Bookmarks</a>
-</p>
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-81.htm">Creating a bookmark within a file</a><br>
-<a href="tasks-82.htm">Deleting a Bookmark</a><br>
-<a href="tasks-77.htm">Adding line items in the Tasks view</a><br>
-<a href="tasks-77b.htm">Associating a task with an editable resource</a>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0" width="324" height="14"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Creating a bookmark for an entire file</title></HEAD><BODY BGCOLOR="#ffffff"><a NAME="elementId-1001031"></a><a NAME="pgfId-1001036"></a><h1>Creating a bookmark for an entire file</h1><p>You can bookmark individual files in the Workbench, in order to open themquickly from the Bookmarks view later.</p><ol>  <li>In the Navigator view, right-click the file that you want to    add to your list of bookmarks.</li>  <li>Select <b>Add Bookmark</b> from the file's pop-up menu.</li></ol><p>At any time, You can open the bookmarked file for editing bydouble-clicking the bookmark in the Bookmarks view(<b>Window &gt; Show View &gt; Bookmarks</b>).</p><p>You can also create bookmarks for specific lines of text orsource code or within a file. See the list of related topics below.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/cbookmrk.htm">Bookmarks</a><br><a href="../concepts/ctskview.htm">Tasks view</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-81.htm">Creating a bookmark within a file</a><br><a href="tasks-82.htm">Deleting a Bookmark</a><br><a href="tasks-77.htm">Adding line items in the Tasks view</a><br><a href="tasks-77b.htm">Associating a task with an editable resource</a></p><p>&nbsp;<br><a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0" width="324" height="14"></a></p></BODY></HTML>
