--- a/bundles/org.eclipse.platform.doc.user/concepts/cbookmrk.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cbookmrk.htm
@@ -29,6 +29,10 @@ Deleting a Bookmark<br>
 </a><a href="../tasks/tasks-77.htm">Adding line items in the Tasks view</a><a href="../tasks/tasks-77b.htm"><br>
 Associating a task with an editable resource</a></p>
 
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+<a href="../reference/ref-28.htm">Bookmarks view</a>
+</p>
+
 <p>&nbsp;<br>
 <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0" width="324" height="14"></a>
 </p>
