--- a/bundles/org.eclipse.jdt.doc.user/tips/TMPuqlmccd973.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/TMPuqlmccd973.htm
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 
-<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1"
+<link rel="STYLESHEET" href="file:///D|/eclipseWorkbench7/plugins/org.eclipse.jdt.doc.user/book.css" charset="ISO-8859-1"
 	type="text/css">
 <title>JDT Tips and Tricks</title>
 
@@ -557,21 +557,6 @@
 			in a view and choose <b>Run &gt; Run As &gt; JUnit test</b>. This creates a
 			launch configuration to run the selected test.</td>
 		</tr>
-		<tr>
-			<td width="20%" valign="top" align="right"><b>Hide JUnit view until errors or failures occur</b></td>
-			
-    <td valign="top" align="left" width="80%">You can make the JUnit view open 
-      only when there are errors or failures. That way, you can have the view 
-      set as a fast view and never look at it when there are no failing tests. 
-      While there are no problems in your tests you will see this icon <img src="images/ss4.gif" width="16" height="16" alt="Successfully running"> 
-      (the number of the little green squares will grow, indicating progress) 
-      while running them and this icon <img src="images/junitsucc.gif" width="16" height="16" alt="Successfully finished"> 
-      after hey are finished. If, however, errors or failures occur, the icon 
-      will change to <img src="images/ff4.gif" width="16" height="16" alt="Fallure or error occurred"> 
-      (or <img src="images/juniterr.gif" width="16" height="16" alt="Fisihed with failure or error"> 
-      if tests are finished) and the JUnit view will appear. This behavior can 
-      be configured via the <strong>Java > JUnit preference page</strong>.</td>
-		</tr>
 		
 		
 		<tr>
@@ -590,7 +575,7 @@
 	</tbody>
 </table>
 <p> 
-      <a href="../hglegal2003.htm"><IMG SRC="../images/ngibmcpy2003.gif" WIDTH=324 HEIGHT=14 alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0"></a>
+      <a href="file:///D|/eclipseWorkbench7/plugins/org.eclipse.jdt.doc.user/hglegal2003.htm"><IMG SRC="file:///D|/eclipseWorkbench7/plugins/org.eclipse.jdt.doc.user/images/ngibmcpy2003.gif" WIDTH=324 HEIGHT=14 alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0"></a>
 	</p>
 
 </body>
