Added incremental find tip

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -98,7 +98,7 @@
   <tr>
     <td width="20%" valign="top" align="right"><b>Go to last edit location</b></td>
     <td width="80%" valign="top" align="left"><b>Navigate &gt; Go
-      to Last Edit Location</b> (Ctrl+Q) takes you back to
+      to Last Edit Location</b> takes you back to
       the place where you last made a change. A button marked <img border="0" src="images/last_edit_pos.gif" alt="Go to last edit postion icon" width="16" height="16">
       shows up in the toolbar when the Editor Navigation action set is
       enabled.</td>
@@ -331,6 +331,19 @@
         replaced and select <strong>Replace Selected...</strong> from the view's popup menu.
         <p>
         It is currently not possible to automatically replace all matches.</p>
+	</td>
+  </tr> 
+
+  <tr>
+	<td valign="top" align="right" width="20%">
+		<strong>Incrementally find a string</strong>
+	</td>
+    <td valign="top" align="left" width="80%">
+        Use <strong>Edit &gt; Incremental Find Next</strong> or <strong>Edit &gt; Incremental Find Previous</strong>
+        to enter the incremental find mode: the search string can now incrementally be entered via the keyboard.
+        <p>
+        The search string is shown in the status line when the editor is in incremental find mode. In this case
+        selecting the command goes to the next or previous match.</p>
 	</td>
   </tr> 
 
